--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Chats">
+<ion-view view-title="Meets">
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in vm.events" type="item-text-wrap" >
