Add 'create meet' button

--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -1,4 +1,8 @@
 <ion-view view-title="Meets">
+<ion-nav-buttons side="right">
+      <button class="button" ui-sref="tab.events.create">
+        Create Meet
+      </button>
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in vm.events" type="item-text-wrap" >
