Add transition to 'create event'

--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -1,8 +1,9 @@
 <ion-view view-title="Meets">
-<ion-nav-buttons side="right">
-      <button class="button" ui-sref="tab.events.create">
+  <ion-nav-buttons side="right">
+    <button class="button" ui-sref="tab.events.create">
         Create Meet
-      </button>
+    </button>
+  </ion-nav-buttons>
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in vm.events" type="item-text-wrap" >
