fix 'Create meet' view

--- a/src/app/events/events-create/events-create.html
+++ b/src/app/events/events-create/events-create.html
@@ -1,16 +1,5 @@
-<ion-nav-view name="tab-events-create">
-<ion-view view-title="Meets"> 
+<ion-view view-title="Create Meet"> 
   <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in vm.events" type="item-text-wrap" >
-        <h2>{{event.title}}</h2>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-
-        <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
-          Delete
-        </ion-option-button>
-      </ion-item>
-    </ion-list>
+    hello
   </ion-content>
 </ion-view>
-</ion-nav-view>
