--- a/src/app/layout/tabs.html
+++ b/src/app/layout/tabs.html
@@ -6,7 +6,7 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
 <!-- Events Tab -->
-	<ion-tab title="Meets" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" ui-sref="tab.events.index">
+	<ion-tab title="Meets" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" ui-sref="tab.events.index">s
 		<ion-nav-view name="tab-events"></ion-nav-view>
 	</ion-tab>
 
