--- a/src/app/events/events-create/events-create.html
+++ b/src/app/events/events-create/events-create.html
@@ -1,5 +1,38 @@
-<ion-view view-title="Create Meet"> 
-  <ion-content>
-    hello
-  </ion-content>
+<ion-view view-title="Create Meet">
+    <ion-content>
+        <ion-list>
+            <div class="item item-divider">
+                Create Meet
+            </div>
+            <label class="item item-input">
+                <input type="text" placeholder="Title">
+            </label>
+            <label class="item item-input">
+                <textarea placeholder="Description"></textarea>
+            </label>
+            <div class="item item-divider"></div>
+            <label class="item item-input">
+                <input type="text" placeholder="Place">
+            </label>
+            <label class="item item-input">
+                <input type="date" placeholder="Title">
+            </label>
+            <div class="item item-divider"></div>
+            <ion-item class="item-icon-right">
+                Invite People
+                <i class="icon ion-chevron-right icon-accessory"></i>
+            </ion-item>
+            <ion-item>
+                <div class="row">
+                    <div class="col col-30">Assisting Limit</div>
+                    <div class="col col-20">{{vm.range}}</div>
+                    <div class="range range-positive col-50">
+                        <i class="icon ion-ios-sunny-outline"></i>
+                        <input ng-model="vm.range"type="range" name="volume" min="0" max="100">
+                        <i class="icon ion-ios-sunny"></i>
+                    </div>
+                </div>
+            </ion-item>
+        </ion-list>
+    </ion-content>
 </ion-view>
