--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -1,19 +1,18 @@
 <ion-view view-title="Meets">
-  <ion-nav-buttons side="right">
-    <button class="button" ui-sref="tab.events.create">
-        Create Meet
-    </button>
-  </ion-nav-buttons>
-  <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in vm.events" type="item-text-wrap" >
-        <h2>{{event.title}}</h2>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-
-        <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
-          Delete
-        </ion-option-button>
-      </ion-item>
-    </ion-list>
-  </ion-content>
+    <ion-nav-buttons side="right">
+        <button class="button" ng-click="vm.transition()">
+            Create Meet
+        </button>
+    </ion-nav-buttons>
+    <ion-content>
+        <ion-list>
+            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in vm.events" type="item-text-wrap">
+                <h2>{{event.title}}</h2>
+                <i class="icon ion-chevron-right icon-accessory"></i>
+                <ion-option-button class="button-assertive" ng-click="vm.remove(  event)">
+                    Delete
+                </ion-option-button>
+            </ion-item>
+        </ion-list>
+    </ion-content>
 </ion-view>
