--- a/src/app/events/events-create/events-create.html
+++ b/src/app/events/events-create/events-create.html
@@ -1,4 +1,9 @@
 <ion-view view-title="Create Meet">
+    <ion-nav-buttons side="right">
+        <button class="button" ng-click="vm.createEvent()">
+            Create
+        </button>
+    </ion-nav-buttons>
     <ion-content>
         <ion-list>
             <div class="item item-divider">
@@ -28,7 +33,7 @@
                     <div class="col col-20">{{vm.range}}</div>
                     <div class="range range-positive col-50">
                         <i class="icon ion-ios-sunny-outline"></i>
-                        <input ng-model="vm.range"type="range" name="volume" min="0" max="100">
+                        <input ng-model="vm.range" type="range" name="volume" min="0" max="100">
                         <i class="icon ion-ios-sunny"></i>
                     </div>
                 </div>
