Add transition to invite people

--- a/src/app/events/events-create/events-create.html
+++ b/src/app/events/events-create/events-create.html
@@ -17,7 +17,7 @@
             </label>
             
             <div class="item item-divider"></div>
-            <ion-item class="item-icon-right">
+            <ion-item class="item-icon-right" ng-click="vm.goToInvitePeopleView()">
                 Invite People
                 <i class="icon ion-chevron-right icon-accessory"></i>
             </ion-item>
