Set basic html for 'invite people'

--- a/src/app/events/events-create/events-create-invite/events-create-invite.html
+++ b/src/app/events/events-create/events-create-invite/events-create-invite.html
@@ -1,1 +1,12 @@
-hola
+<ion-view view-title="Invite People">
+    <ion-nav-buttons side="right">
+        <button class="button" ng-click="vm.create(vm.newEvent)">
+            Create
+        </button>
+    </ion-nav-buttons>
+    <ion-content>
+        <ion-list>
+          <ion-item>Friend</ion-item>
+        </ion-list>
+    </ion-content>
+</ion-view>
