--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -6,7 +6,7 @@
     </ion-nav-buttons>
     <ion-content>
         <ion-list>
-            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in vm.events" type="item-text-wrap">
+            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="event in vm.events" type="item-text-wrap" ng-click="vm.goToDetailed(event)">
                 <h2>{{event.title}}</h2>
                 <i class="icon ion-chevron-right icon-accessory"></i>
                 <ion-option-button class="button-assertive" ng-click="vm.remove(  event)">
