--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Meet Details">
+<ion-view  hide-tabs='true' view-title="Meet Details">
     <ion-nav-buttons side="right">
         <button class="button" ng-click="vm.create(vm.newEvent)">
             Create
@@ -32,5 +32,7 @@
                 <i class="icon ion-email"></i>
                 {{vm.currentEvent.title}}
             </ion-item>
+            </div>
     </ion-content>
+
 </ion-view>
