--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -1,4 +1,4 @@
-<ion-view  hide-tabs='true' view-title="Meet Details">
+<ion-view hide-tabs='true' view-title="Meet Details">
     <ion-nav-buttons side="right">
         <button class="button" ng-click="vm.create(vm.newEvent)">
             Create
@@ -7,40 +7,32 @@
     <ion-content>
         <div class="list card">
             <ion-item class="item-icon-left">
-                <i class="icon ion-email"></i>
-                {{vm.currentEvent.title}}
+                <i class="icon ion-email"></i> {{vm.currentEvent.title}}
             </ion-item>
             <div class="item item-text-wrap">
-                This is a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an item that has wrapping text.This is a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains 
+                This is a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an item that has wrapping text.This is a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains
             </div>
-            
         </div>
-         <div class="card">
+        <div class="card">
             <div class="button-bar">
-              <a class="button">Assisting</a>
-              <a class="button">Can't assist</a>
-              <a class="button">Third</a>
+                <a class="button">Assisting</a>
+                <a class="button">Can't assist</a>
+                <a class="button">Third</a>
             </div>
         </div>
-
         <div class="list card">
             <ion-item class="item-icon-left">
-                <i class="icon ion-email"></i>
-                {{vm.currentEvent.title}}
+                <i class="icon ion-email"></i> {{vm.currentEvent.title}}
             </ion-item>
             <ion-item class="item-icon-left">
-                <i class="icon ion-email"></i>
-                {{vm.currentEvent.title}}
+                <i class="icon ion-email"></i> {{vm.currentEvent.title}}
             </ion-item>
-            </div>
+        </div>
     </ion-content>
-    <ion-footer-bar align-title="left" class="bar-assertive">
-              <div class="buttons">
-                <button class="button">Left Button</button>
-              </div>
-              <h1 class="title">Title!</h1>
-              <div class="buttons" ng-click="doSomething()">
-                <button class="button">Right Button</button>
-              </div>
-            </ion-footer-bar>
+    <ion-footer-bar align-title="center">
+            <div class="button-bar">
+                <a class="button">Assist</a>
+                <a class="button">Can't assist</a>
+            </div>
+    </ion-footer-bar>
 </ion-view>
