Add invite and subadmins buttons

--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -1,7 +1,10 @@
 <ion-view hide-tabs='true' view-title="Meet Details">
     <ion-nav-buttons side="right">
         <button class="button" ng-click="vm.create(vm.newEvent)">
-            Create
+            Invite
+        </button>
+        <button class="button" ng-click="vm.create(vm.newEvent)">
+            Subadmins
         </button>
     </ion-nav-buttons>
     <ion-content>
