--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -4,7 +4,7 @@
             Invite
         </button>
         <button class="button" ng-click="vm.create(vm.newEvent)">
-            Subadmins
+            Edit
         </button>
     </ion-nav-buttons>
     <ion-content>
