Configure edit button and transition to work correctly

--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -3,7 +3,7 @@
         <button class="button" ng-click="vm.create(vm.newEvent)">
             Invite
         </button>
-        <button class="button" ng-click="vm.create(vm.newEvent)">
+        <button class="button" ng-click="vm.goToEdit()">
             Edit
         </button>
     </ion-nav-buttons>
@@ -33,9 +33,9 @@
         </div>
     </ion-content>
     <ion-footer-bar align-title="center">
-            <div class="button-bar">
-                <a class="button">Assist</a>
-                <a class="button">Can't assist</a>
-            </div>
+        <div class="button-bar">
+            <a class="button">Assist</a>
+            <a class="button">Can't assist</a>
+        </div>
     </ion-footer-bar>
 </ion-view>
