Make transition work

--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -1,6 +1,6 @@
 <ion-view hide-tabs='true' view-title="Meet Details">
     <ion-nav-buttons side="right">
-        <button class="button" ng-click="vm.create(vm.newEvent)">
+        <button class="button" ng-click="vm.goToInvite()">
             Invite
         </button>
         <button class="button" ng-click="vm.goToEdit()">
