--- a/src/app/events/event-detail/events-detail-invite/events-detail-invite.html
+++ b/src/app/events/event-detail/events-detail-invite/events-detail-invite.html
@@ -1,8 +1,12 @@
 <ion-view view-title="Contacts">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.contacts" type="item-text-wrap">
+      <ion-item class="item-remove-animate item-button-right" ng-repeat="contact in vm.contacts" type="item-text-wrap" >
         <h2>{{contact.name}}</h2>
+        <button class="button button-clear button-positive">
+           Invite
+        </button>
+
 
         <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
           Delete
