Configure abstract routes

--- a/src/app/layout/tabs.html
+++ b/src/app/layout/tabs.html
@@ -6,12 +6,12 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive" ng-class="{'tabs-item-hide': $root.hideTabs}">
 
 <!-- Events Tab -->
-	<ion-tab title="Meets" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" ui-sref="tab.events.index">s
+	<ion-tab title="Meets" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" ui-sref="tab.events.index">
 		<ion-nav-view name="tab-events"></ion-nav-view>
 	</ion-tab>
 
 	<!-- Contacts Tab -->
-	<ion-tab title="Contacts" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/contacts">
+	<ion-tab title="Contacts" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" ui-sref="tab.contacts.index">
 		<ion-nav-view name="tab-contacts"></ion-nav-view>
 	</ion-tab>
 
