--- a/src/app/contacts/contacts.html
+++ b/src/app/contacts/contacts.html
@@ -1,13 +1,17 @@
 <ion-view view-title="Contacts">
-  <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.contacts" type="item-text-wrap">
-        <h2>{{contact.name}}</h2>
-
-        <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
-          Delete
-        </ion-option-button>
-      </ion-item>
-    </ion-list>
-  </ion-content>
+    <ion-nav-buttons side="right">
+        <button class="button" ng-click="vm.goToAddContacts()">
+            Add contact
+        </button>
+    </ion-nav-buttons>
+    <ion-content>
+        <ion-list>
+            <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.contacts" type="item-text-wrap">
+                <h2>{{contact.name}}</h2>
+                <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
+                    Delete
+                </ion-option-button>
+            </ion-item>
+        </ion-list>
+    </ion-content>
 </ion-view>
