Hide tabs on transition

--- a/src/app/contacts/contacts-add/contacts-add.html
+++ b/src/app/contacts/contacts-add/contacts-add.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Add Contacts">
+<ion-view hide-tabs='true' view-title="Add Contacts">
   <ion-content>
     <ion-list>
       
