--- a/src/app/contacts/contacts-add/contacts-add.html
+++ b/src/app/contacts/contacts-add/contacts-add.html
@@ -1,7 +1,12 @@
 <ion-view hide-tabs='true' view-title="Add Contacts">
-  <ion-content>
-    <ion-list>
-      
-    </ion-list>
-  </ion-content>
+    <ion-content>
+        <div class="bar bar-header item-input-inset">
+            <label class="item-input-wrapper">
+                <i class="icon ion-ios-search placeholder-icon"></i>
+                <input type="search" placeholder="Search">
+            </label>
+        </div>
+        <ion-list>
+        </ion-list>
+    </ion-content>
 </ion-view>
