--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -18,9 +18,9 @@
         </div>
         <div class="card">
             <div class="button-bar">
-                <a class="button">Assisting</a>
-                <a class="button">Can't assist</a>
-                <a class="button">Third</a>
+                <a class="button" ng-click="vm.goToInvited('coming')">Assisting</a>
+                <a class="button" ng-click="vm.goToInvited('notComing')">Can't assist</a>
+                <a class="button" ng-click="vm.goToInvited('pending')">Third</a>
             </div>
         </div>
         <div class="list card">
