--- a/src/app/registration/registration.html
+++ b/src/app/registration/registration.html
@@ -1,8 +1,16 @@
 <ion-view view-title="Registration">
-  <ion-content>
-    <ion-list>
-          Test
-      </ion-toggle>
-    </ion-list>
-  </ion-content>
+    <ion-content>
+        <div class="list">
+            <label class="item item-input">
+                <input type="email" name="email" ng-model="vm.registrationForm.email" placeholder="Email">
+            </label>
+            <label class="item item-input">
+                <input ng-model="vm.registrationForm.password" type="password" name="password" placeholder="Password">
+            </label>
+            <label class="item item-input">
+                <input type="password" name="password_confirmation" ng-model="vm.registrationForm.password_confirmation" placeholder="Password confirmation"></textarea>
+            </label>
+        </div>
+        <button class="button button-full button-positive" ng-click="vm.registerUser()">Register</button>
+    </ion-content>
 </ion-view>
