--- a/src/app/authentication/authentication.html
+++ b/src/app/authentication/authentication.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Registration">
+<ion-view view-title="Sign In">
     <ion-content>
         <div class="list">
             <label class="item item-input">
