--- a/src/app/authentication/authentication.html
+++ b/src/app/authentication/authentication.html
@@ -8,6 +8,6 @@
                 <input ng-model="vm.loginForm.password" type="password" name="password" placeholder="Password">
             </label>
         </div>
-        <button class="button button-full button-positive" ng-click="vm.registerUser()">Sign In</button>
+        <button class="button button-full button-positive" ng-click="vm.signInUser()">Sign In</button>
     </ion-content>
 </ion-view>
