Add sign out button

--- a/src/app/account/account.html
+++ b/src/app/account/account.html
@@ -4,6 +4,7 @@
 			<ion-toggle  ng-model="vm.settings.enableFriends">
 				Enable Friends
 			</ion-toggle>
+      <button class="button button-full button-assertive" ng-click="vm.signOutUser()">Sign Out</button>
 		</ion-list>
 	</ion-content>
 </ion-view>
