Load description from event

--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -13,7 +13,7 @@
                 <i class="icon ion-email"></i> {{vm.currentEvent.title}}
             </ion-item>
             <div class="item item-text-wrap">
-                This is a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an item that has wrapping text.This is a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains an a basic Card which contains
+                {{vm.currentEvent.description}}
             </div>
         </div>
         <div class="card">
