--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -25,10 +25,10 @@
         </div>
         <div class="list card">
             <ion-item class="item-icon-left">
-                <i class="icon ion-email"></i> {{vm.currentEvent.title}}
+                <i class="icon ion-email"></i> {{vm.currentEvent.status}}
             </ion-item>
             <ion-item class="item-icon-left">
-                <i class="icon ion-email"></i> {{vm.currentEvent.title}}
+                <i class="icon ion-email"></i> {{vm.currentEvent.admin}}
             </ion-item>
         </div>
     </ion-content>
