--- a/src/app/events/events-create/events-create.html
+++ b/src/app/events/events-create/events-create.html
@@ -25,7 +25,7 @@
                 <div class="row">
                     <div class="col col-30">Assisting Limit</div>
                     <div class="col col-10"></div>
-                    <div class="col col-10">{{vm.newEvent.assistLimit}}</div>
+                    <div class="col col-10">{{vm.newEvent.assist_limit}}</div>
                     <div class="range range-positive col-50">
                         <i class="icon ion-ios-sunny-outline"></i>
                         <input ng-model="vm.newEvent.assistLimit" type="range" name="volume" min="0" max="100">
