--- a/src/app/contacts/contacts.html
+++ b/src/app/contacts/contacts.html
@@ -6,7 +6,7 @@
     </ion-nav-buttons>
     <ion-content>
         <ion-list>
-            <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.contacts" type="item-text-wrap">
+            <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.ContactsService.results" type="item-text-wrap">
                 <h2>{{contact.name}}</h2>
                 <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
                     Delete
