--- a/src/app/contacts/contacts.html
+++ b/src/app/contacts/contacts.html
@@ -5,9 +5,34 @@
         </button>
     </ion-nav-buttons>
     <ion-content>
+    <div class="item item-divider">
+            Requests Recieved
+        </div>
         <ion-list>
-            <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.ContactsService.results" type="item-text-wrap">
-                <h2>{{contact.name}}</h2>
+            <ion-item class="item-remove-animate item-icon-right" ng-repeat="requestRecieved in vm.ContactsService.requestsRecievedResults" type="item-text-wrap">
+                <h2>{{requestRecieved.uid}}</h2>
+                <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
+                    Delete
+                </ion-option-button>
+            </ion-item>
+        </ion-list>
+        <div class="item item-divider">
+            Requests Sent
+        </div>
+        <ion-list>
+            <ion-item class="item-remove-animate item-icon-right" ng-repeat="requestSent in vm.ContactsService.requestsSentResults" type="item-text-wrap">
+                <h2>{{requestSent.uid}}</h2>
+                <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
+                    Delete
+                </ion-option-button>
+            </ion-item>
+        </ion-list>
+        <div class="item item-divider">
+            Contacts
+        </div>
+        <ion-list>
+            <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.ContactsService.acceptedResults" type="item-text-wrap">
+                <h2>{{contact.uid}}</h2>
                 <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
                     Delete
                 </ion-option-button>
