Add capability to accept and reject contacts

--- a/src/app/contacts/contacts.html
+++ b/src/app/contacts/contacts.html
@@ -9,19 +9,20 @@
             Requests Recieved
         </div>
         <ion-list>
-            <ion-item class="item-remove-animate item-icon-right" ng-repeat="requestRecieved in vm.ContactsService.requestsRecievedResults" type="item-text-wrap">
+            <ion-item class="item-remove-animate item-button-right" ng-repeat="requestRecieved in vm.ContactsService.requestsRecievedResults" type="item-text-wrap">
                 <h2>{{requestRecieved.uid}}</h2>
-                <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
-                    Delete
-                </ion-option-button>
+                <button class="button button-posistive" ng-click="vm.requestRecievedActionSheet(requestRecieved)">
+                  <i class="icon ion-ios-telephone"></i>
+                </button>
             </ion-item>
         </ion-list>
         <div class="item item-divider">
             Requests Sent
         </div>
         <ion-list>
-            <ion-item class="item-remove-animate item-icon-right" ng-repeat="requestSent in vm.ContactsService.requestsSentResults" type="item-text-wrap">
+            <ion-item class="item-remove-animate" ng-repeat="requestSent in vm.ContactsService.requestsSentResults" type="item-text-wrap">
                 <h2>{{requestSent.uid}}</h2>
+
                 <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
                     Delete
                 </ion-option-button>
