--- a/src/app/contacts/contacts.html
+++ b/src/app/contacts/contacts.html
@@ -34,7 +34,7 @@
         <ion-list>
             <ion-item class="item-remove-animate item-icon-right" ng-repeat="contact in vm.ContactsService.acceptedResults" type="item-text-wrap">
                 <h2>{{contact.uid}}</h2>
-                <ion-option-button class="button-assertive" ng-click="vm.remove(event)">
+                <ion-option-button class="button-assertive" ng-click="vm.removeContact(contact)">
                     Delete
                 </ion-option-button>
             </ion-item>
