--- a/src/app/events/events-create/events-create.html
+++ b/src/app/events/events-create/events-create.html
@@ -1,6 +1,6 @@
 <ion-view hide-tabs='true' view-title="Create Meet">
     <ion-nav-buttons side="right">
-        <button class="button" ng-click="vm.create(vm.newEvent)">
+        <button class="button" ng-click="vm.create(vm.EventsService.newEvent)">
             Create
         </button>
     </ion-nav-buttons>
@@ -10,10 +10,10 @@
                 Create Meet
             </div>
             <label class="item item-input">
-                <input ng-model="vm.newEvent.title" type="text" placeholder="Title">
+                <input ng-model="vm.EventsService.newEvent.title" type="text" placeholder="Title">
             </label>
             <label class="item item-input">
-                <textarea ng-model="vm.newEvent.description" placeholder="Description"></textarea>
+                <textarea ng-model="vm.EventsService.newEvent.description" placeholder="Description"></textarea>
             </label>
             
             <div class="item item-divider"></div>
@@ -25,7 +25,7 @@
                 <div class="row">
                     <div class="col col-30">Assisting Limit</div>
                     <div class="col col-10"></div>
-                    <div class="col col-10">{{vm.newEvent.assist_limit}}</div>
+                    <div class="col col-10">{{vm.EventsService.newEvent.assist_limit}}</div>
                     <div class="range range-positive col-50">
                         <i class="icon ion-ios-sunny-outline"></i>
                         <input ng-model="vm.newEvent.assistLimit" type="range" name="volume" min="0" max="100">
