--- a/src/styles/ionic.app.scss
+++ b/src/styles/ionic.app.scss
@@ -20,3 +20,11 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "src/lib/ionic/scss/ionic";
 
+.centeredData{
+    margin-left: 20%;
+    color: gray;
+    position: absolute;
+    top: 17px;
+    left: 70px;
+  }
+
