--- a/src/app/events/events-create/events-create.html
+++ b/src/app/events/events-create/events-create.html
@@ -26,13 +26,13 @@
             <ion-item class="item-button-right">
                 Assist Limit 
                 <div class="centeredData">
-                {{vm.EventsService.newEvent.assistLimit}}
+                {{vm.EventsService.newEvent.assist_limit}}
                 </div>
                 <div class="buttons">
-                    <button class="button button-energized">
+                    <button class="button button-energized" ng-click="vm.decreaseAssistLimit()">
                         <i class="icon ion-minus-round"></i>
                     </button>
-                    <button class="button button-dark">
+                    <button class="button button-dark" ng-click="vm.increaseAssistLimit()">
                         <i class="icon ion-plus-round"></i>
                     </button>
                 </div>
