--- a/src/app/events/event-detail/event-detail.html
+++ b/src/app/events/event-detail/event-detail.html
@@ -18,8 +18,8 @@
         </div>
         <div class="card">
             <div class="button-bar">
-                <a class="button" ng-click="vm.goToInvited('coming')">Assisting {{vm.EventsService.currentEvent.invited_people_counter.assisting}}/{{vm.EventsService.currentEvent.assist_limit}}</a>
-                <a class="button" ng-click="vm.goToInvited('notComing')">Can't assist {{vm.EventsService.currentEvent.invited_people_counter.not_assisting}}</a>
+                <a class="button" ng-click="vm.goToInvited('assisting')">Assisting {{vm.EventsService.currentEvent.invited_people_counter.assisting}}/{{vm.EventsService.currentEvent.assist_limit}}</a>
+                <a class="button" ng-click="vm.goToInvited('notAssisting')">Can't assist {{vm.EventsService.currentEvent.invited_people_counter.not_assisting}}</a>
                 <a class="button" ng-click="vm.goToInvited('pending')">Pending {{vm.EventsService.currentEvent.invited_people_counter.pending}}</a>
             </div>
         </div>
