--- a/src/app/events/event-detail/events-detail-invited/events-detail-invited.html
+++ b/src/app/events/event-detail/events-detail-invited/events-detail-invited.html
@@ -1,9 +1,9 @@
 <ion-view view-title="{{vm.invitedStatus}}">
   <ion-content>
     <ion-list>
-     <ion-item class="item-remove-animate item-button-right" ng-repeat="invitedContact in vm.EventsService.currentEvent.invited_people" type="item-text-wrap">
-          <h2>{{invitedContact.uid}}</h2>
-          <button class="button button-posistive" ng-click="vm.requestRecievedActionSheet(requestRecieved)">
+     <ion-item class="item-remove-animate item-button-right" ng-repeat="invitedUser in vm.EventsService.currentEvent.invited_people" type="item-text-wrap">
+          <h2>{{invitedUser.uid}}</h2>
+          <button class="button"  ng-class="{'button-energized': invitedUser.privilege == 'admin','button-light': invitedUser.privilege == 'subadmin' }" ng-click="vm.changePrivilege(invitedUser)">
             <i class="icon ion-ios-telephone"></i>
           </button>
       </ion-item>
