Refracto to load all invited people in detailed view

--- a/src/app/events/event-detail/events-detail-invited/events-detail-invited.html
+++ b/src/app/events/event-detail/events-detail-invited/events-detail-invited.html
@@ -1,7 +1,7 @@
 <ion-view view-title="{{vm.invitedStatus}}">
   <ion-content>
     <ion-list>
-     <ion-item class="item-remove-animate item-button-right" ng-repeat="invitedUser in vm.EventsService.currentEvent.invited_people" type="item-text-wrap">
+     <ion-item class="item-remove-animate item-button-right" ng-repeat="invitedUser in vm.EventsService.currentEvent.invited_people" ng-show="invitedUser.status == vm.invitedStatus" type="item-text-wrap">
           <h2>{{invitedUser.uid}}</h2>
           <button class="button"  ng-class="{'button-energized': invitedUser.privilege == 'admin','button-light': invitedUser.privilege == 'subadmin' }" ng-click="vm.EventsService.changeMemberPrivilege(invitedUser)">
             <i class="icon ion-ios-telephone"></i>
