--- a/src/app/events/event-detail/events-detail-invite/events-detail-invite.html
+++ b/src/app/events/event-detail/events-detail-invite/events-detail-invite.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Contacts">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-button-right" ng-repeat="contact in vm.contacts" type="item-text-wrap" >
-        <h2>{{contact.name}}</h2>
-        <button class="button button-clear button-positive">
+      <ion-item class="item-remove-animate item-button-right" ng-repeat="contact in vm.ContactsService.acceptedResults" type="item-text-wrap" >
+        <h2>{{contact.uid}}</h2>
+        <button class="button button-clear button-positive" ng-class="{'button-energized': contact.invited}">
            Invite
         </button>
 
