--- a/src/app/events/event-detail/events-detail-edit/events-detail-edit.html
+++ b/src/app/events/event-detail/events-detail-edit/events-detail-edit.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Create Meet">
     <ion-nav-buttons side="right">
-        <button class="button" ng-click="vm.edit(vm.newEvent)">
+        <button class="button" ng-click="vm.EventsService.update(vm.editingEvent)">
             Done
         </button>
     </ion-nav-buttons>
@@ -10,23 +10,25 @@
                 Edit Meet
             </div>
             <label class="item item-input">
-                <input ng-model="vm.newEvent.title" type="text" placeholder="Title">
+                <input ng-model="vm.editingEvent.title" type="text" placeholder="Title">
             </label>
             <label class="item item-input">
-                <textarea ng-model="vm.newEvent.description" placeholder="Description"></textarea>
+                <textarea ng-model="vm.editingEvent.description" placeholder="Description">
+                </textarea>
             </label>
-            
             <div class="item item-divider"></div>
-            <ion-item>
-                <div class="row">
-                    <div class="col col-30">Assisting Limit</div>
-                    <div class="col col-10"></div>
-                    <div class="col col-10">{{vm.newEvent.assistLimit}}</div>
-                    <div class="range range-positive col-50">
-                        <i class="icon ion-ios-sunny-outline"></i>
-                        <input ng-model="vm.newEvent.assistLimit" type="range" name="volume" min="0" max="100">
-                        <i class="icon ion-ios-sunny"></i>
-                    </div>
+            <ion-item class="item-button-right">
+                Assist Limit 
+                <div class="centeredData">
+                {{vm.editingEvent.assist_limit}}
+                </div>
+                <div class="buttons">
+                    <button class="button button-energized" ng-click="vm.decreaseAssistLimit()">
+                        <i class="icon ion-minus-round"></i>
+                    </button>
+                    <button class="button button-dark" ng-click="vm.increaseAssistLimit()">
+                        <i class="icon ion-plus-round"></i>
+                    </button>
                 </div>
             </ion-item>
         </ion-list>
