--- a/src/app/events/events-create/events-create-invite/events-create-invite.html
+++ b/src/app/events/events-create/events-create-invite/events-create-invite.html
@@ -13,7 +13,7 @@
           <div class="item item-divider">
               Contacts
           </div>
-          <ion-item class="item-button-right" ng-repeat="contact in vm.ContactsService.acceptedResults" ng-hide="contact.hide">    
+          <ion-item class="item-button-right" ng-repeat="contact in vm.ContactsService.all" ng-hide="contact.hide">    
             {{contact.uid}}
             <button class="button button-posistive" ng-click="vm.inviteContact(contact)">
               <i class="icon ion-ios-telephone"></i>
