--- a/src/app/contacts/contacts.html
+++ b/src/app/contacts/contacts.html
@@ -22,7 +22,7 @@
         <ion-list>
             <ion-item class="item-remove-animate" ng-repeat="contact in vm.ContactsService.all" type="item-text-wrap" ng-show="{{!contact.accepted && contact.type == 'normal'}}">
                 <h2>{{contact.uid}}</h2>
-                <ion-option-button class="button-assertive" ng-click="vm.removeContact(requestSent)">
+                <ion-option-button class="button-assertive" ng-click="vm.removeContact(contact)">
                     Cancel
                 </ion-option-button>
             </ion-item>
