--- a/src/app/events/event-detail/events-detail-invite/events-detail-invite.html
+++ b/src/app/events/event-detail/events-detail-invite/events-detail-invite.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Contacts">
+<ion-view hide-tabs='true' view-title="Contacts">
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-button-right" ng-repeat="contact in vm.ContactsService.all" type="item-text-wrap" >
