Add grey background

--- a/src/app/account/account.html
+++ b/src/app/account/account.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Account">
+<ion-view class="cool-gray-background" view-title="Account">
 	<ion-content>
 		<ion-list>
 			<ion-toggle  ng-model="vm.settings.enableFriends">
