--- a/src/app/contacts/contacts-add/contacts-add.html
+++ b/src/app/contacts/contacts-add/contacts-add.html
@@ -1,4 +1,4 @@
-<ion-view hide-tabs='true' view-title="Add Contacts">
+<ion-view class="cool-gray-background" hide-tabs='true' view-title="Add Contacts">
     <ion-content>
         <div class="bar bar-header item-input-inset">
             <label class="item-input-wrapper">
