--- a/src/app/contacts/contacts.html
+++ b/src/app/contacts/contacts.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Contacts">
+<ion-view class="cool-gray-background" view-title="Contacts">
     <ion-nav-buttons side="right">
         <button class="button" ng-click="vm.goToAddContacts()">
             Add contact
