--- a/src/app/events/event-detail/events-detail-edit/events-detail-edit.html
+++ b/src/app/events/event-detail/events-detail-edit/events-detail-edit.html
@@ -1,4 +1,4 @@
-<ion-view hide-tabs='true' view-title="Create Meet">
+<ion-view class="cool-gray-background" hide-tabs='true' view-title="Create Meet">
     <ion-nav-buttons side="right">
         <button class="button" ng-click="vm.EventsService.update(vm.editingEvent)">
             Done
