--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Meets">
+<ion-view class="cool-gray-background" view-title="Meets">
     <ion-nav-buttons side="right">
         <button class="button" ng-click="vm.transition()">
             Create Meet
