--- a/src/app/registration/registration.html
+++ b/src/app/registration/registration.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Registration">
+<ion-view class="cool-gray-background" view-title="Registration">
     <ion-content>
         <div class="list">
             <label class="item item-input">
