--- a/src/app/events/event-detail/events-detail-invited/events-detail-invited.html
+++ b/src/app/events/event-detail/events-detail-invited/events-detail-invited.html
@@ -1,4 +1,4 @@
-<ion-view hide-tabs='true' view-title="{{vm.invitedStatus}}">
+<ion-view class="cool-gray-background" hide-tabs='true' view-title="{{vm.invitedStatus}}">
   <ion-content>
     <ion-list>
      <ion-item class="item-remove-animate item-button-right" ng-repeat="invitedUser in vm.EventsService.currentEvent.invited_people" ng-show="invitedUser.status == vm.invitedStatus" type="item-text-wrap">
