--- a/src/styles/ionic.app.scss
+++ b/src/styles/ionic.app.scss
@@ -19,7 +19,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
 @import "src/lib/ionic/scss/ionic";
-
+@import "src/styles/Main.scss";
 .centeredData{
     margin-left: 20%;
     color: gray;
